log
Wed 24 Apr 2024 08:36:09 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:51:5: error: expected expression before ‘}’ token
   51 |     }
      |     ^
Compilation failed
3d64eb3
Wed 24 Apr 2024 08:36:41 PM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
f6b85f8
Wed 24 Apr 2024 08:40:32 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:71:3: error: ‘mapa’ undeclared (first use in this function); did you mean ‘map’?
   71 |   mapa->buckets = (Pair **)calloc(capacity,sizeof(Pair *));
      |   ^~~~
      |   map
hashmap.c:71:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
53aaff4
Wed 24 Apr 2024 08:43:50 PM UTC: 
 hashmap.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  5|4
total_score: 30/70
b7838c7
Wed 24 Apr 2024 08:53:05 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  8|3
total_score: 40/70
7cf4201
Wed 24 Apr 2024 08:57:29 PM UTC: 
 hashmap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
764a53b
